# clapeg

./: .gitignore  README.md  error_log.txt  metadata_from_usb.csv  pyproject.toml
notebooks/: data.csv  demo_dicom.ipynb
src/clapeg/: config.py  dicom_metadata.py  dicom_stats.py  error_log.txt  gui.py  metadata_from_G.csv  metadata_from_usb.csv  usb_tools.py
