[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "clapeg"
version     = "0.1"
description = "Project codebase for advanced methods for analyzing and securing computer evidence"
license = { text = "Proprietary" }
authors = [{ name = "Jakub Chojnacki", email = "jacobchojnacki@protonmail.com" },
           { name = "Arkadiusz Bryłkowski", email="arek@wp.pl"}]
readme= "README.md"
requires-python = ">= 3.8, <3.12"

dependencies = [
    "numpy~=1.26.0; python_version >= '3.9'",
    "fire",
    "typer",
    "tqdm",
    "chardet",
    "pydicom ~= 2.4.3",
    "pandas",
    "matplotlib",
    "exifread",
    "numpy"
]


[project.optional-dependencies]
jupyter = [
    "jupyterlab~=3.6",
]

lint = [
    "black ~= 23.7",
    "autoflake ~= 2.2",
    "flake8 ~= 6.0",
    "flake8-pyi ~= 23.6",
    "flake8-docstrings ~= 1.7",
    "pyproject-flake8 ~= 6.0",
    "isort ~= 5.10",
    "mypy ~= 1.4",
    "pymarkdownlnt ~= 0.9",
    "pre-commit ~= 3.3",
]


test = [
    "pytest ~= 7.1",
    "pytest-cases ~= 3.6",
    "pytest-cov ~= 3.0",
    "pytest-icdiff ~= 0.5",
    "pytest-mock ~= 3.8",
    "pytest-sugar ~= 0.9",
    "pytest-timeout ~= 2.1",
]
docs = [
    "mkdocs ~= 1.3",
    "mkdocstrings[python] ~= 0.19",
    "mkdocs-material ~= 8.3",
    "mkdocs-gen-files ~= 0.3",
    "mkdocs-literate-nav ~= 0.4",
    "mkdocs-section-index ~= 0.3",
]

dev = ["clapeg[jupyter, lint, test, docs]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line_length = 120

[tool.flake8]
extend_exclude = [".venv/", "build/", "dist/", "docs/"]
per_file_ignores = ["**/_[a-z]*.py:D", "tests/*.py:D", "*.pyi:D"]

ignore = [
    "D", # pydocstyle
    "E", # pycodestyle
    "W", # pycodestyle
]

ignore_decorators = "property" # https://github.com/PyCQA/pydocstyle/pull/546

[tool.isort]
profile             = "black"
line_length         = 120
order_by_type       = true
lines_between_types = 1
combine_as_imports  = true
force_grid_wrap     = 2
known_first_party   = "clapeg"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
strict = true
allow_redefinition = true
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_calls = false
mypy_path = ["src/", "typings/"]
files = "."
exclude = [".venv/", "build/", "dist/", "docs/"]

[[tool.mypy.overrides]]
module = "psutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true